--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -74,16 +74,29 @@
 		<!-- Put your content here -->
 
 		<!-- For example columns with settings: -->
-		<div class="row">
+<!-- 		<div class="row">
 			<div class="col s6 input-field">
 				<input type="checkbox" class="value" id="option1" />
 				<label for="option1" class="translate">option1</label>
 			</div>
-
+-->
 			<div class="col s6 input-field">
-				<input type="text" class="value" id="option2" />
-				<label for="option2" class="translate">option2</label>
+				<input type="text" class="value" id="device" />
+				<label for="device" class="translate">Используемое устройство Bluetooth (hci0)</label>
 			</div>
+			<div class="col s6 input-field">
+				<input type="text" class="value" id="mac" />
+				<label for="mac" class="translate">MAC адрес чайника (FF:FF:FF:FF:FF:FF)</label>
+			</div>
+			<div class="col s6 input-field">
+				<input type="text" class="value" id="password" />
+				<label for="option2" class="translate">Пароль (длина 16 символов)</label>
+			</div>
+			<div class="col s6 input-field">
+				<input type="text" class="value" id="timedelay" />
+				<label for="timedelay" class="translate">Интервал обновлений (секунды)</label>
+			</div>
+
 		</div>
 
 	</div>
