--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -90,7 +90,7 @@
 			</div>
 			<div class="col s6 input-field">
 				<input type="text" class="value" id="password" />
-				<label for="option2" class="translate">Пароль (длина 16 символов)</label>
+				<label for="password" class="translate">Пароль (длина 16 символов)</label>
 			</div>
 			<div class="col s6 input-field">
 				<input type="text" class="value" id="timedelay" />
