--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -96,7 +96,16 @@
 				<input type="text" class="value" id="timedelay" />
 				<label for="timedelay" class="translate">Интервал обновлений (секунды)</label>
 			</div>
+<button id="pair">Pair device</button>
 
+  <script>
+    window.onload = () => {
+      const button = document.getElementById('pair')
+      button.addEventListener('pointerup', function(event) {
+        // TODO:
+      });
+    }
+  </script>
 		</div>
 
 	</div>
